<resources>
    <string name="app_name">DynaQuiz</string>
    <string name="loginTitle">DynaQuiz</string>
    <string name="login_wellcome">Bem Vindo!</string>
    <string name="login_ask_name">Digite seu nome ou apelido</string>
    <string name="login_start">Começar</string>
    <string name="quizzQuestion_send_answer">Enviar Resposta</string>
    <string name="quizQuestion_info_answer">Selecione uma das resposta abaixo</string>
    <string name="results_title">Avaliação</string>
    <string name="result_thanks">Obrigado por responder o DynaQuiz</string>
    <string name="alert_info_your_name_please">Preencha seu nome ou apelido, por favor.</string>
    <string name="hint_name">Nome ou Apelido</string>
    <string name="alert_could_not_load_question">Não foi possível carregar a pergunta.</string>
    <string name="oops">Oops...</string>
    <string name="try_again">Tentar Novamente</string>
    <string name="exit">Sair</string>
    <string name="hits_status">Sua pontuação é %1$s de 10</string>
    <string name="loading">Carregando...</string>
    <string name="correct_title">Acertou!</string>
    <string name="correct_subtitle">Sua resposta está correta.</string>
    <string name="continuos">Continuar</string>
    <string name="incorrect_title">Errou!</string>
    <string name="incorrect_subtitle">Que pena, você errou essa.</string>
    <string name="last_quizz_users">Últimos Quiz</string>
    <string name="end_game">Fim do Jogo</string>
</resources>