<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    tools:context=".ui.quizquestion.QuizzQuestionActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/background"
        android:gravity="center_horizontal"
        android:orientation="vertical">

        <TextView
            android:id="@+id/tv_app_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:layout_marginBottom="30dp"
            android:gravity="center"
            android:text="@string/loginTitle"
            android:textColor="@color/white"
            android:textSize="25sp"
            android:textStyle="bold" />

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:layout_marginBottom="30dp"
            android:background="@color/white"
            android:elevation="5dp"
            app:cardCornerRadius="8dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="16dp">


                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text="Qual das alternativas abaixo apenas contêm classes de palavras?"
                    android:textColor="#363A43"
                    android:textSize="18sp"
                    android:textStyle="bold"/>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text="@string/quizQuestion_info_answer"
                    android:textColor="#7A8089"
                    android:textSize="12sp"
                    />


                <RadioGroup
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginTop="16dp">

                    <!-- Pesquisar com tornar isso um estilo -->
                    <RadioButton
                        android:id="@+id/radioButton"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="RadioButton"
                        tools:checked="true"
                        android:layout_marginBottom="8dp"
                        android:button="@android:color/transparent"
                        android:background="@drawable/radio_selector"
                        android:textColor="@drawable/text_color"
                        android:textAlignment="center"
                        android:elevation="4dp"
                        />

                    <RadioButton
                        android:id="@+id/radioButton2"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="RadioButton"
                        android:layout_marginBottom="8dp"
                        android:button="@android:color/transparent"
                        android:background="@drawable/radio_selector"
                        android:textColor="@drawable/text_color"
                        android:textAlignment="center"
                        android:elevation="4dp"
                        />

                    <RadioButton
                        android:id="@+id/radioButton3"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="RadioButton"
                        android:layout_marginBottom="8dp"
                        android:button="@android:color/transparent"
                        android:background="@drawable/radio_selector"
                        android:textColor="@drawable/text_color"
                        android:textAlignment="center"
                        android:elevation="4dp"
                        />

                    <RadioButton
                        android:id="@+id/radioButton4"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="RadioButton"
                        android:layout_marginBottom="8dp"
                        android:button="@android:color/transparent"
                        android:background="@drawable/radio_selector"
                        android:textColor="@drawable/text_color"
                        android:textAlignment="center"
                        android:elevation="4dp"
                        />

                    <RadioButton
                        android:id="@+id/radioButton5"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="RadioButton"
                        android:layout_marginBottom="8dp"
                        android:button="@android:color/transparent"
                        android:background="@drawable/radio_selector"
                        android:textColor="@drawable/text_color"
                        android:textAlignment="center"
                        android:elevation="4dp"
                        />
                </RadioGroup>

                <Button
                    style="@android:style/MediaButton"
                    android:id="@+id/btn_sendAnswer"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/quizzQuestion_send_answer"
                    android:background="?attr/colorPrimary"
                    android:textColor="@color/white"
                    android:textSize="18sp"
                    android:layout_marginTop="20dp"
                    android:padding="10dp"/>


            </LinearLayout>

        </androidx.cardview.widget.CardView>


    </LinearLayout>
</ScrollView>

